weird button spacing issue on mobile solved?

--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ h2 {
     display:inline-block;
 }
 nav button {
+    display:inline-block;
     margin: 0.5vw 0.5vw 0 0;
     font-family:'Courier New', Courier, monospace;     
     font-size: 100%;
